--- a/assets/pcss/admin/pages/settings/_plugin-settings.pcss
+++ b/assets/pcss/admin/pages/settings/_plugin-settings.pcss
@@ -402,6 +402,42 @@
 	}
 }
 
+.bc-diagnostics-data__meta-sync_logs {
+
+	.bc-diagnostics-data__meta-label {
+		display: none;
+	}
+
+	.bc-diagnostics-data__meta-value {
+		padding-left: 0;
+	}
+}
+
+.bc-product-sync-data-table {
+	border-spacing: 0;
+	width: 100%;
+
+	th,
+	td {
+		padding: 14px;
+		display: table-cell;
+	}
+
+	th {
+		font-weight: 700;
+		background-color: var(--color-bc-concrete);
+	}
+
+	tr > td {
+		border-bottom: 1px solid var(--color-bc-concrete);
+	}
+}
+
+.bc-sync-summary-meta {
+	display: block;
+	margin-bottom: 4px;
+}
+
 .bc-settings-form--bigcommerce {
 
 	p.submit {
