--- a/assets/pcss/admin/pages/settings/_plugin-settings.pcss
+++ b/assets/pcss/admin/pages/settings/_plugin-settings.pcss
@@ -105,8 +105,8 @@
 }
 
 .bc-settings-header__cta-text {
-	font-size: var(--font-size-content);
-	margin: 0;
+	font-size: var(--font-size-content-m);
+	margin: 12px 0 0;
 }
 
 .bc-settings-header__cta-btn {
