--- a/assets/pcss/content/cart/_cart-page.pcss
+++ b/assets/pcss/content/cart/_cart-page.pcss
@@ -248,8 +248,7 @@ input[type="text"].bc-coupon-code__input {
 }
 
 .bc-cart-subtotal,
-.bc-cart-tax,
-.bc-cart-total {
+.bc-cart-tax {
 	text-align: right;
 	padding: 25px 0 0;
 	display: flex;
@@ -262,8 +261,7 @@ input[type="text"].bc-coupon-code__input {
 }
 
 .bc-cart-subtotal__label,
-.bc-cart-tax__label,
-.bc-cart-total__label {
+.bc-cart-tax__label {
 	font-size: var(--font-size-content-s);
 	margin-right: 14px;
 	text-align: right;
@@ -272,8 +270,7 @@ input[type="text"].bc-coupon-code__input {
 }
 
 .bc-cart-subtotal__amount,
-.bc-cart-tax__amount,
-.bc-cart-total__amount {
+.bc-cart-tax__amount {
 	font-weight: var(--font-weight-bold);
 	text-align: left;
 	flex: 0 0 70px;
@@ -286,14 +283,6 @@ input[type="text"].bc-coupon-code__input {
 
 .bc-cart-tax__amount {
 	font-size: var(--font-size-content);
-}
-
-.bc-cart-total {
-	align-items: center;
-}
-
-.bc-cart-total__label {
-	font-weight: var(--font-weight-bold);
 }
 
 .bc-cart-actions {
