--- a/assets/pcss/wp-themes/_all.pcss
+++ b/assets/pcss/wp-themes/_all.pcss
@@ -14,6 +14,7 @@
 @import "twenty-nineteen-theme";
 @import "twenty-twenty-theme";
 @import "twenty-twenty-one-theme";
+@import "twenty-twenty-two-theme";
 @import "genesis-themes";
 @import "shoptimizer";
 @import "veganos";
